--- a/iptv/eeetv/www/all/index.html
+++ b/iptv/eeetv/www/all/index.html
@@ -14,7 +14,6 @@
     	<script src="/js/jquery-3.3.1.min.js"></script>
         <!-- iPad 1,3 768 × 928 (1536 x 1856 pixels) In portrait on iOS 5 -->
         <meta name="viewport" content="width=768, initial-scale=1.42, minimum-scale=1.42, maximum-scale=1.42">
-        <!-- <meta name="viewport" content="initial-scale=1.42, minimum-scale=1.42, maximum-scale=1.42"> -->
         <script>
             // iPhone scalling
             if (/iphone/i.test(navigator.userAgent.toLowerCase()))
@@ -45,14 +44,18 @@
                 // progess bar size
                 barsize: 25,
 
+                // usd epg duration in ms
+                timems: 20000,
+
                 // previous/next offset manipulation
-                move_offset: function (str) {
+                move_offset: function (str, step) {
+                    step = step || 1;
                     switch (str) {
                         case "+1":
-                            this.offset += 1;
+                            this.offset += step;
                             break;
                         case "-1":
-                            this.offset -= 1;
+                            this.offset -= step;
                             break;
                         default:
                             this.offset = 0;
@@ -107,7 +110,7 @@
 
                 format: function (style, epg) {
                     var nl = "\\n";
-                    var s  = "";
+                    var  s = "";
 
                     switch (style) {
 
@@ -136,6 +139,18 @@
                         break;
                     }
                     return s;
+                    //return s.replace(/"/, '\"');
+                },
+
+                format_list: function (epglist) {
+                    var nl = "\\n";
+                    var  s = this.ass_tag(['fs20', 'an4']);
+
+                    for (var i = 0; i < epglist.length; i++) {
+                        var epg = epglist[i];
+                        s += this.hhmm(epg.start_dt) + " " + this.str_max(epg.title, 38) + nl;
+                    }
+                    return s;
                 },
             };
 
@@ -151,7 +166,7 @@
 
                 // delayed autorelease
                 //
-                if (delayup) setTimeout(function() { button.removeClass("buttondown");}, delayup);
+                if (delayup) setTimeout(function() { button.removeClass("buttondown");}.bind(button), delayup);
             }
 
             function press_button_with_active_channel() {
@@ -163,11 +178,13 @@
 
                                 // eject old pressed button
                                 //
-                                $(".buttondown").removeClass("buttondown");
+                                //$(".buttondown").removeClass("buttondown");
 
                                 // press button with active channel
                                 //
-                                $("button[name='"+ title +"']").addClass("buttondown");
+                                //$("button[name='"+ title +"']").addClass("buttondown");
+
+                                simulate_press_eject($("button[name='"+ title +"']"), true, 0);
 
                             } catch(e) {
                                 if (data.indexOf('socat') > 1 && data.indexOf('Connection refused') > 1) {
@@ -206,11 +223,13 @@
 
                     // eject old pressed button
                     //
-                    $(".buttondown").removeClass("buttondown");
+                    //$(".buttondown").removeClass("buttondown");
 
                     // simulate press
                     //
-                    $(this).addClass("buttondown");
+                    //$(this).addClass("buttondown");
+
+                    simulate_press_eject($(this), true, 0);
 
                     // channel switching
                     // ?channel=name
@@ -229,11 +248,13 @@
 
                     // simulate press
                     //
-                    $(this).addClass("buttondown");
+                    //$(this).addClass("buttondown");
 
                     // 2s delayed release
                     //
-                    setTimeout(function() { $(this).removeClass("buttondown");}.bind(this), 2000);
+                    //setTimeout(function() { $(this).removeClass("buttondown");}.bind(this), 2000);
+
+                    simulate_press_eject($(this), false, 2000);
 
                     // survey has specific parameters
                     //
@@ -283,10 +304,11 @@
                     //
                     else if (name == "program") {
 
+                        // button pressed = active channel
                         var title = $(".radio.buttondown").attr("name");
 
                         // handle offset movements (get value as string)
-                        osd_epg.move_offset($(this).attr("data-offset"));
+                        osd_epg.move_offset($(this).attr("data-offset"), 1);
 
                         // just test pattern for osd font-size
                         if ($(this).text() == "test") {
@@ -327,7 +349,8 @@
                                             // ?show-text=this+is+text
                                             $.get(  "/cgi-bin/tv.cgi",
                                                     {
-                                                        "show-text-ass-cc": text
+                                                        "show-text-ass-cc": text,
+                                                        "time": osd_epg.timems
                                                     },
                                                     alert_dbg,
                                                     "text"
@@ -340,6 +363,53 @@
                                     "text"
                             )
                         }
+                    }
+                    else if (name == "program-list") {
+
+                        // button pressed = active channel
+                        var title = $(".radio.buttondown").attr("name");
+
+                        // limit (page size)
+                        var size = $(this).data("size")
+
+                        // handle offset movements (get value as string)
+                        osd_epg.move_offset($(this).attr("data-offset"), size);
+
+                        $.get( "/cgi-bin/tv.cgi",
+                                {
+                                    "get-epg-list": size,
+                                    "channel":      title,
+                                    "offset":       osd_epg.offset
+                                },
+                                function (data, status) {
+
+                                    try {
+                                        var epglist = $.parseJSON(data);
+                                        // default
+                                        var text = osd_epg.format("title", { "title": "program nedostupný" });
+
+                                        // valid epg
+                                        if (epglist[0].tvid) {
+                                            text = osd_epg.format_list(epglist);
+                                        }
+
+                                        // text parameter
+                                        // ?show-text=this+is+text
+                                        $.get(  "/cgi-bin/tv.cgi",
+                                                {
+                                                    "show-text-ass-cc": text,
+                                                    "time": osd_epg.timems
+                                                },
+                                                alert_dbg,
+                                                "text"
+                                        );
+
+                                    } catch(e) {
+                                        alert("get-epg title:"+title+", error:"+e+"\n data:"+data);
+                                    }
+                                },
+                                "text"
+                        )
                     }
                     // single command (no parameters) like clock, info, weather
                     //
@@ -462,12 +532,14 @@
 
     <h4><span>program</span></h4>
 
-        <button class="button textbutton single" name="program">test</button>
+        <button class="button textbutton single" name="program-list" data-size="14">prehlad</button>
         <button class="button textbutton single" name="program" data-offset="-1"><< pred</button>
         <button class="button textbutton single" name="program">teraz</button>
         <button class="button textbutton single" name="program" data-offset="+1">po >></button>
+        <br>
+        <button class="button textbutton single" name="program">test</button>
 
-    <h4><span>rádio</span></h4>
+<h4><span>rádio</span></h4>
         <button class="button textbutton1em radio" name="radio 80">Radio 80's</button>
         <button class="button textbutton1em radio" name="chfi soft rock">Soft Rock</button>
         <button class="button textbutton1em radio" name="q107">Q-107</button>
