added/reorganized gui

--- a/iptv/eeetv/www/all/index.html
+++ b/iptv/eeetv/www/all/index.html
@@ -445,10 +445,11 @@
         <button class="button radio" name="TA3"></button>
         <button class="button radio" name="TV Hronka"></button>
         <br>
-        <!--
         <button class="button radio" name="STV3"></button>
         <button class="button radio" name="STV4"></button>
-        -->
+        <button class="button radio" name="Info Vojna"></button>
+        <button class="button radio" name="Radio Info Vojna"></button>
+        <br>
         <button class="button radio" name="Wau"></button>
         <button class="button radio" name="Lux"></button>
         <button class="button radio" name="Osem"></button>
@@ -478,6 +479,10 @@
         <button class="button radio" name="Nova Gold"></button>
         <button class="button radio" name="Nova Cinema"></button>
         <br>
+        <button class="button radio" name="TV Barrandov"></button>
+        <button class="button radio" name="Barrandov+"></button>
+        <button class="button radio" name="Kino Barrandov"></button>
+        <br>
         <button class="button radio" name="Cinemax"></button>
         <button class="button radio" name="Cinemax 2"></button>
         <button class="button radio" name="HBO"></button>
@@ -495,8 +500,13 @@
 	<br>
         <button class="button radio" name="TV Raj"></button>
         <button class="button radio" name="E!"></button>
-        <button class="button radio" name="Info Vojna"></button>
-        <button class="button radio" name="Radio Info Vojna"></button>
+
+    <h4><span>TV program</span></h4>
+
+        <button class="button textbutton single" name="program-list" data-size="14">prehlad</button>
+        <button class="button textbutton single" name="program" data-offset="-1"><< pred</button>
+        <button class="button textbutton single" name="program">teraz</button>
+        <button class="button textbutton single" name="program" data-offset="+1">po >></button>
 
     <h4><span>zahraničné kanály</span></h4>
 
@@ -527,19 +537,20 @@
     <br>
         <button class="button radio" name="MSNBC"></button>
         <button class="button radio" name="Sky News"></button>
+        <button class="button radio" name="Sky News UK"></button>
+        <button class="button radio" name="Sky News US"></button>
+    <br>
         <button class="button radio" name="ABC"></button>
         <button class="button radio" name="ABC News"></button>
+        <button class="button radio" name="CBC news"></button>
+        <button class="button radio" name="InfoWars.com"></button>
 
-    <h4><span>program</span></h4>
+    <h4><span>test</span></h4>
 
-        <button class="button textbutton single" name="program-list" data-size="14">prehlad</button>
-        <button class="button textbutton single" name="program" data-offset="-1"><< pred</button>
-        <button class="button textbutton single" name="program">teraz</button>
-        <button class="button textbutton single" name="program" data-offset="+1">po >></button>
-        <br>
         <button class="button textbutton single" name="program">test</button>
 
-<h4><span>rádio</span></h4>
+    <h4><span>rádio</span></h4>
+
         <button class="button textbutton1em radio" name="radio 80">Radio 80's</button>
         <button class="button textbutton1em radio" name="chfi soft rock">Soft Rock</button>
         <button class="button textbutton1em radio" name="q107">Q-107</button>
@@ -630,6 +641,10 @@
         <button class="button textbutton single survey"
                 data-start="Biela Púť - Jasná" data-end="Lomnický Štít" data-osd="Tatry prehľad"
                 name="survey-range">Tatry</button>
+
+        <button class="button textbutton single survey"
+                data-start="Malinô Brdo - 1209m" data-end="Donovaly" data-osd="Fatra/Donovaly prehľad"
+                name="survey-range">Fatra</button>
 
         <button class="button textbutton single survey"
                 data-start="Biela Púť - Jasná" data-end="Niagara Falls" data-osd="Kamery prehľad"
