--- a/iptv/eeetv/www/all/index.html
+++ b/iptv/eeetv/www/all/index.html
@@ -445,14 +445,15 @@
         <button class="button radio" name="TA3"></button>
         <button class="button radio" name="TV Hronka"></button>
         <br>
-        <button class="button radio" name="STV3"></button>
-        <button class="button radio" name="STV4"></button>
-        <button class="button radio" name="Info Vojna"></button>
-        <button class="button radio" name="Radio Info Vojna"></button>
-        <br>
         <button class="button radio" name="Wau"></button>
         <button class="button radio" name="Lux"></button>
         <button class="button radio" name="Osem"></button>
+        <button class="button radio" name="Dr. Bukovsky"></button>
+        <br>
+        <button class="button radio" name="TV Raj"></button>
+        <button class="button radio" name="STV3"></button>
+        <button class="button radio" name="Info Vojna"></button>
+        <button class="button radio" name="Radio Info Vojna"></button>
 
     <h4><span>české kanály</span></h4>
 
@@ -483,6 +484,10 @@
         <button class="button radio" name="Barrandov+"></button>
         <button class="button radio" name="Kino Barrandov"></button>
         <br>
+        <button class="button radio" name="FilmBox+"></button>
+        <button class="button radio" name="FilmBox Family"></button>
+        <button class="button radio" name="E!"></button>
+        <br>
         <button class="button radio" name="Cinemax"></button>
         <button class="button radio" name="Cinemax 2"></button>
         <button class="button radio" name="HBO"></button>
@@ -497,9 +502,6 @@
         <button class="button radio" name="Retro"></button>
         <button class="button radio" name="VH 1"></button>
         <button class="button radio" name="Monte Carlo"></button>
-	<br>
-        <button class="button radio" name="TV Raj"></button>
-        <button class="button radio" name="E!"></button>
 
     <h4><span>TV program</span></h4>
 
