--- a/iptv/eeetv/www/all/index.html
+++ b/iptv/eeetv/www/all/index.html
@@ -490,17 +490,23 @@
         <button class="button radio" name="FilmBox+"></button>
         <button class="button radio" name="FilmBox Family"></button>
         <button class="button radio" name="E!"></button>
+        <button class="button radio" name="HBO 3"></button>
         <br>
         <button class="button radio" name="Cinemax"></button>
         <button class="button radio" name="Cinemax 2"></button>
         <button class="button radio" name="HBO"></button>
         <button class="button radio" name="HBO 2"></button>
         <br>
+        <button class="button radio" name="AXN"></button>
+        <button class="button radio" name="AXN White"></button>
+        <button class="button radio" name="AXN Black"></button>
+        <br>
         <button class="button radio" name="Kino svet"></button>
         <button class="button radio" name="TV Paprika"></button>
         <button class="button radio" name="Fashion TV"></button>
         <button class="button radio" name="Elektrik TV"></button>
         <br>
+        <button class="button radio" name="Ceskoslovensko"></button>
         <button class="button radio" name="Praha TV"></button>
         <button class="button radio" name="TV Natura"></button>
         <br>
